--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,8 @@
     <script>mocha.setup('bdd')</script>
     <script src="../src/fast.js"></script>
     <script src="../src/LIS.js"></script>
-    <script src="../src/LCSStr.js"></script>
+    <script src="../src/LCS.js"></script>
+    <script src="../src/LCStr.js"></script>
     <script src="spec/Sequence.spec.js"></script>
     <script>
         function assert(expr, msg) {
