--- a/test/test.html
+++ b/test/test.html
@@ -10,6 +10,7 @@
     <script src="../src/LIS.js"></script>
     <script src="../src/LCS.js"></script>
     <script src="../src/LCStr.js"></script>
+    <script src="../src/KMP.js"></script>
     <script src="spec/Sequence.spec.js"></script>
     <script>
         function assert(expr, msg) {
