--- a/test/test.html
+++ b/test/test.html
@@ -6,12 +6,9 @@
     <script src="./3rd_party/mocha.js"></script>
     <script src="./3rd_party/expect.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="../src/fast.js"></script>
-    <script src="../src/LIS.js"></script>
-    <script src="../src/LCS.js"></script>
-    <script src="../src/LCStr.js"></script>
-    <script src="../src/KMP.js"></script>
+    <script src="../fast.min.js"></script>
     <script src="spec/Sequence.spec.js"></script>
+    <script src="spec/DataStructure.spec.js"></script>
     <script>
         function assert(expr, msg) {
             if (!expr) throw new Error(msg || 'failed');
