--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <script src="./3rd_party/mocha.js"></script>
     <script src="./3rd_party/expect.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="../fast.js"></script>
+    <script src="../fast.min.js"></script>
     <script src="spec/Sequence.spec.js"></script>
     <script src="spec/DataStructure.spec.js"></script>
     <script>
