--- a/test/test.html
+++ b/test/test.html
@@ -9,6 +9,8 @@
     <script src="../fast.min.js"></script>
     <script src="spec/Sequence.spec.js"></script>
     <script src="spec/DataStructure.spec.js"></script>
+    <script src="spec/DSP.spec.js"></script>
+    <script src="spec/MP.spec.js"></script>
     <script>
         function assert(expr, msg) {
             if (!expr) throw new Error(msg || 'failed');
