--- a/test/test.html
+++ b/test/test.html
@@ -10,6 +10,7 @@
     <script src="spec/Sequence.spec.js"></script>
     <script src="spec/DataStructure.spec.js"></script>
     <script src="spec/DSP.spec.js"></script>
+    <script src="spec/NT.spec.js"></script>
     <script src="spec/MP.spec.js"></script>
     <script>
         function assert(expr, msg) {
