--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
     <script src="../fast.js"></script>
     <script src="spec/Sequence.spec.js"></script>
     <script src="spec/DataStructure.spec.js"></script>
-    <script src="spec/DSP.spec.js"></script>
+    <script src="spec/Numeric.spec.js"></script>
     <script src="spec/NT.spec.js"></script>
     <script src="spec/MP.spec.js"></script>
     <script>
