--- a/test/test.html
+++ b/test/test.html
@@ -10,8 +10,8 @@
     <script src="spec/Sequence.spec.js"></script>
     <script src="spec/DataStructure.spec.js"></script>
     <script src="spec/Numeric.spec.js"></script>
-    <script src="spec/NT.spec.js"></script>
-    <script src="spec/MP.spec.js"></script>
+    <script src="spec/NumberTheory.spec.js"></script>
+    <script src="spec/MultiPrecision.spec.js"></script>
     <script>
         function assert(expr, msg) {
             if (!expr) throw new Error(msg || 'failed');
