--- a/test/test.html
+++ b/test/test.html
@@ -13,6 +13,7 @@
     <script src="spec/datastructure/CartesianTree.spec.js"></script>
     <script src="spec/datastructure/RedBlackTree.spec.js"></script>
     <script src="spec/datastructure/LinkedList.spec.js"></script>
+    <script src="spec/datastructure/ImmutableArray.js"></script>
     <script src="spec/Numeric.spec.js"></script>
     <script src="spec/NumberTheory.spec.js"></script>
     <script src="spec/MultiPrecision.spec.js"></script>
