--- a/test/test.html
+++ b/test/test.html
@@ -30,7 +30,7 @@
     </script>
 </head>
 <body>
-<h1>Unit tests of fidola.js</h1>
+<h1>Unit tests of Fidola</h1>
 <div id="mocha"></div>
 </body>
 </html>
