Extended GCD; Big Integer

--- a/test/test.html
+++ b/test/test.html
@@ -15,8 +15,8 @@
     <script src="spec/datastructure/LinkedList.spec.js"></script>
     <script src="spec/datastructure/ImmutableArray.js"></script>
     <script src="spec/Numeric.spec.js"></script>
-    <script src="spec/NumberTheory.spec.js"></script>
-    <script src="spec/MultiPrecision.spec.js"></script>
+    <script src="spec/nt/NumberTheory.spec.js"></script>
+    <script src="spec/nt/MultiPrecision.spec.js"></script>
     <script>
         function assert(expr, msg) {
             if (!expr) throw new Error(msg || 'failed');
