--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
     <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../node_modules/expect.js/expect.js"></script>
+    <script src="../node_modules/expect.js/index.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../fidola.js"></script>
     <script src="spec/Sequence.spec.js"></script>
